@@ -1,6 +1,7 @@
 0.6.0 (2024-01-01)
   * Complete rewrite in Python with async/await support for improved performance
   * Add diff generation capability using xdelta3, bsdiff, or rsync (for custom tools only - standard APT does not support diffs)
+  * Add optional GPG signature verification for Release files (requires gpgv command, no Python dependencies)
   * Implement automatic retry with exponential backoff for failed downloads
   * Add resume support for partial downloads using HTTP Range requests
   * Add optional checksum verification after downloads
